@@ -193,7 +193,22 @@ namespace netDxf.Collections
             ls.Save(file);
         }
 
+        /// <summary>
+        /// Removes all layers states.
+        /// </summary>
+        public void RemoveAll()
+        {
+            string[] names = new string[this.Names.Count];
+            this.Names.CopyTo(names, 0);
+            foreach (string name in names)
+            {
+                this.Remove(name);
+            }
+        }
+
         #endregion
+
+        #region overrrides
 
         /// <summary>
         /// Adds a LayerState to the list.
@@ -299,19 +314,8 @@ namespace netDxf.Collections
             return true;
         }
 
-        /// <summary>
-        /// Removes all layers states.
-        /// </summary>
-        public void RemoveAll()
-        {
-            string[] names = new string[this.Names.Count];
-            this.Names.CopyTo(names, 0);
-            foreach (string name in names)
-            {
-                this.Remove(name);
-            }
-        }
-
+        #endregion
+        
         #region Layer events
 
         private void Item_NameChanged(TableObject sender, TableObjectChangedEventArgs<string> e)
