@@ -1416,7 +1416,7 @@
             Removes an <see cref="T:netDxf.Entities.EntityObject">entity</see> from the document.
             </summary>
             <param name="entity">The <see cref="T:netDxf.Entities.EntityObject">entity</see> to remove from the document.</param>
-            <returns>True if item is successfully removed; otherwise, false. This method also returns false if item was not found.</returns>
+            <returns>True if item is successfully removed; otherwise, false.</returns>
             <remarks>
             This function will not remove other tables objects that might be not in use as result from the elimination of the entity.<br />
             This includes empty layers, blocks not referenced anymore, line types, text styles, dimension styles, multiline styles, groups, and application registries.<br />
@@ -1707,6 +1707,11 @@
             <param name="file">LAS file to export.</param>
             <param name="layerStateName">Layer state name to export.</param>
         </member>
+        <member name="M:netDxf.Collections.LayerStateManager.RemoveAll">
+            <summary>
+            Removes all layers states.
+            </summary>
+        </member>
         <member name="M:netDxf.Collections.LayerStateManager.Add(netDxf.Objects.LayerState,System.Boolean)">
             <summary>
             Adds a LayerState to the list.
@@ -1733,11 +1738,6 @@
             <param name="item"><see cref="T:netDxf.Objects.LayerState">LayerState</see> to remove from the document.</param>
             <returns>True if the LayerState has been successfully removed, or false otherwise.</returns>
             <remarks>Reserved LayerState or any other referenced by objects cannot be removed.</remarks>
-        </member>
-        <member name="M:netDxf.Collections.LayerStateManager.RemoveAll">
-            <summary>
-            Removes all layers states.
-            </summary>
         </member>
         <member name="T:netDxf.Collections.Layouts">
             <summary>
@@ -5200,11 +5200,13 @@
             <summary>
             Gets or sets the ellipse mayor axis.
             </summary>
+            <remarks>The MajorAxis value must be positive and greater than the MinorAxis.</remarks>
         </member>
         <member name="P:netDxf.Entities.Ellipse.MinorAxis">
             <summary>
             Gets or sets the ellipse minor axis.
             </summary>
+            <remarks>The MinorAxis value must be positive and smaller than the MajorAxis.</remarks>
         </member>
         <member name="P:netDxf.Entities.Ellipse.Rotation">
             <summary>
@@ -13454,51 +13456,6 @@
             </para>
             </remarks>
         </member>
-        <member name="M:netDxf.Objects.ImageDefinition.#ctor(System.String)">
-             <summary>
-             Initializes a new instance of the <c>ImageDefinition</c> class. Only available for Net Framework 4.5 builds.
-             </summary>
-             <param name="file">Image file name with full or relative path.</param>
-            <remarks>
-             <para>
-             The name of the file without extension will be used as the name of the image definition.
-             </para>
-             <para>
-             Supported image formats: BMP, JPG, PNG, TIFF.<br />
-             Even thought AutoCAD supports more image formats, this constructor is restricted to the ones the net framework supports in common with AutoCAD.
-             Use the generic constructor instead.
-             </para>
-             <para>
-             Note (this is from the ACAD docs): AutoCAD 2000, AutoCAD LT 2000, and later releases do not support LZW-compressed TIFF files,
-             with the exception of English language versions sold in the US and Canada.<br />
-             If you have TIFF files that were created using LZW compression and want to insert them into a drawing 
-             you must save the TIFF files with LZW compression disabled.
-             </para>
-            </remarks>
-        </member>
-        <member name="M:netDxf.Objects.ImageDefinition.#ctor(System.String,System.String)">
-             <summary>
-             Initializes a new instance of the <c>ImageDefinition</c> class. Only available for Net Framework 4.5 builds.
-             </summary>
-            <param name="name">Image definition name.</param>
-            <param name="file">Image file name with full or relative path.</param>
-            <remarks>
-             <para>
-             The name assigned to the image definition must be unique.
-             </para>
-             <para>
-             Supported image formats: BMP, JPG, PNG, TIFF.<br />
-             Even thought AutoCAD supports more image formats, this constructor is restricted to the ones the .net library supports in common with AutoCAD.
-             Use the generic constructor instead.
-             </para>
-             <para>
-             Note (this is from the ACAD docs): AutoCAD 2000, AutoCAD LT 2000, and later releases do not support LZW-compressed TIFF files,
-             with the exception of English language versions sold in the US and Canada.<br />
-             If you have TIFF files that were created using LZW compression and want to insert them into a drawing 
-             you must save the TIFF files with LZW compression disabled.
-             </para>
-            </remarks>
-        </member>
         <member name="P:netDxf.Objects.ImageDefinition.File">
             <summary>
             Gets or sets the image file.
@@ -17338,14 +17295,6 @@
             <summary>
             Gets the owner of the actual text style.
             </summary>
-        </member>
-        <member name="M:netDxf.Tables.TextStyle.TrueTypeFontFamilyName(System.String)">
-            <summary>
-            Find the font family name of an specified TTF font file. Only available for Net Framework 4.5 builds.
-            </summary>
-            <param name="ttfFont">TTF font file.</param>
-            <returns>The font family name of the specified TTF font file.</returns>
-            <remarks>This method will return an empty string if the specified font is not found in its path or the system font folder or if it is not a valid TTF font.</remarks>
         </member>
         <member name="M:netDxf.Tables.TextStyle.Clone(System.String)">
             <summary>
